# src/feature/user/application/dto/PublicUserResponse.ts
@@ -2,5 +2,6 @@ export interface PublicUserResponse {
   username: string
   displayName: string
   avatarUrl: string | null
+  avatarColor: string | null
   createdAt: string
 }
